<resources>
    <string name="search">Search</string><string name="close_search">Close search</string><string name="nothing_found">Nothing found</string><string name="error_search_failed">Could not search the library</string>
    <string name="app_name">the only player</string>
    <string name="login_subtitle">Connect to your Subsonic server</string>
    <string name="server">Server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>

    <string name="library">Library</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>
    <string name="playlist">Playlist</string><string name="playlists_not_found">No playlists found</string><string name="playlist_tracks_count">Tracks: %1$d</string><string name="playlist_public_label">Public</string><string name="read_only">Read only</string>
    <string name="create_playlist">Create playlist</string><string name="edit_playlist">Edit playlist</string><string name="playlist_name">Playlist name</string><string name="public_playlist">Public playlist</string><string name="public_playlist_description">Visible to all users</string><string name="create">Create</string><string name="save">Save</string><string name="cancel">Cancel</string>
    <string name="add_to_playlist">Add to playlist</string><string name="choose_playlist">Choose playlist</string><string name="create_and_add">Create new playlist</string><string name="adding_to_playlist">Adding to playlist…</string><string name="added_to_playlist">Added to playlist</string>
    <string name="download_playlist">Download playlist</string><string name="add_playlist_to_queue">Add playlist to queue</string><string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_title">Delete playlist?</string><string name="delete_playlist_message">“%1$s” will be permanently deleted from the server.</string><string name="delete">Delete</string><string name="remove_from_playlist">Remove selected tracks from playlist</string>
    <string name="tracks">Tracks</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="downloads">Downloads</string>
    <string name="download">Download</string>
    <string name="cancel_download">Cancel download</string>
    <string name="cancel_all_downloads">Cancel all</string>
    <string name="retry_download">Retry download</string>
    <string name="failed_downloads">Failed downloads: %1$d</string>
    <string name="download_error_http">Server error: %1$s (%2$d)</string>
    <string name="download_error_network">Network error (%1$d)</string>
    <string name="download_error_local">Local file error (%1$d)</string>
    <string name="download_error_authentication">Authentication error (%1$d)</string>
    <string name="download_error_invalid_response">Invalid server response (%1$d)</string>
    <string name="download_error_unknown">Unknown error (%1$d)</string>
    <string name="failed_download">Download failed</string>
    <string name="remove_download">Remove download</string>
    <string name="remove_all_downloads">Remove all downloads</string>
    <string name="remove_all_downloads_title">Remove all downloads?</string>
    <string name="remove_all_downloads_message">All downloaded tracks will be removed from this device.</string>
    <string name="remove_selected_downloads">Remove selected downloads</string>
    <string name="no_downloaded_tracks">No downloaded tracks</string>
    <string name="no_downloaded_albums">No downloaded albums</string>
    <string name="more_actions">More actions</string>
    <string name="download_notification_channel">Downloads</string>
    <string name="download_notification_progress">Downloading %1$d of %2$d</string>
    <string name="download_notification_track_progress">%1$d% • %2$s</string>
    <string name="downloads_completed_notification_title">Everything is downloaded</string>
    <string name="downloads_completed_notification_text">Successfully downloaded tracks: %1$d</string>

    <string name="back">Back</string>
    <string name="more">More</string>
    <string name="retry">Retry</string>
    <string name="all_tracks">All tracks</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_title">Sign out?</string>
    <string name="sign_out_message">You will need to sign in again to access your library.</string>
    <string name="albums_count">Albums: %1$d</string>
    <string name="artists_not_found">No artists found</string>
    <string name="albums_not_found">No albums found</string>
    <string name="tracks_not_found">No tracks found</string>
    <string name="no_favorite_tracks">No favorite tracks</string>
    <string name="no_favorite_albums">No favorite albums</string>
    <string name="no_favorite_artists">No favorite artists</string>

    <string name="album_cover">Cover of album %1$s</string>
    <string name="track_cover">Cover of %1$s</string>
    <string name="no_cover">No cover</string>
    <string name="previous_track">Previous track</string>
    <string name="next_track">Next track</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Repeat off</string>
    <string name="repeat_all">Repeat queue</string>
    <string name="repeat_one">Repeat current track</string>
    <string name="queue">Queue</string>
    <string name="open_queue">Open queue</string>
    <string name="queue_empty">There are no tracks after the current track</string>
    <string name="selected_tracks">Selected: %1$d</string>
    <string name="select_track">Select %1$s</string>
    <string name="selected_track">%1$s selected</string>
    <string name="selected_albums">Selected: %1$d</string>
    <string name="selected_album">%1$s selected</string>
    <string name="clear_selection">Clear selection</string>
    <string name="download_selected_tracks">Download selected tracks</string>
    <string name="favorite_selected_tracks">Add selected tracks to favorites</string>
    <string name="add_selected_to_queue">Add selected tracks to queue</string>
    <string name="download_selected_albums">Download selected albums</string>
    <string name="favorite_selected_albums">Add selected albums to favorites</string>
    <string name="add_selected_albums_to_queue">Add selected albums to queue</string>
    <string name="selected_artists">Selected: %1$d</string>
    <string name="favorite_selected_artists">Add selected artists to favorites</string>
    <string name="download_selected_artists">Download selected artists</string>
    <string name="download_track">Download track</string>
    <string name="selected_items">Selected: %1$d</string>
    <string name="add_selected_artists_to_queue">Add selected artists to queue</string>
    <string name="add_album_to_queue">Add album to queue</string>
    <string name="move_track">Move %1$s</string>
    <string name="move_selected_to_top">Move selected tracks to the top</string>
    <string name="remove_selected_tracks">Remove selected tracks</string>
    <string name="remove_track_from_queue">Remove %1$s from queue</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="track_loading">Track is loading</string>
    <string name="track_playing">Track is playing</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>

    <string name="error_server_address_required">Enter the server address</string>
    <string name="error_username_required">Enter your username</string>
    <string name="error_password_required">Enter your password</string>
    <string name="error_authentication_rejected">The server rejected the credentials</string>
    <string name="error_authentication_required">Sign in to continue</string>
    <string name="error_albums_load_failed">Could not load albums</string>
    <string name="error_artists_load_failed">Could not load artists</string>
    <string name="error_tracks_load_failed">Could not load tracks</string>
    <string name="error_favorites_load_failed">Could not load favorites</string>
    <string name="error_favorite_update_failed">Could not update favorites</string>
    <string name="error_download_failed">Could not start download</string>
    <string name="error_playlists_load_failed">Could not load playlists</string><string name="error_playlist_load_failed">Could not load playlist</string><string name="error_playlist_update_failed">Could not update playlist</string>
    <string name="error_opensubsonic">OpenSubsonic returned error %1$d</string>
    <string name="error_http">The server returned HTTP error %1$d</string>
    <string name="error_invalid_server_response">The server returned an invalid response</string>
    <string name="error_unknown_opensubsonic_status">Unknown OpenSubsonic status: %1$s</string>
    <string name="error_player_connection_failed">Could not connect to the player</string>
    <string name="error_missing_track_stream_url">The track has no playback URL</string>
    <string name="error_playback_failed">Could not play the track</string>
    <string name="sort">Sort</string><string name="sort_title">Title</string><string name="sort_artist">Artist</string><string name="sort_year">Release year</string><string name="sort_added">Date added</string><string name="sort_name">Name</string><string name="sort_ascending">Ascending</string><string name="sort_descending">Descending</string>
</resources>
